--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   </head>
   <body>
     <div class="container">
-        <header>
-            Header Logo
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </header>
+      <header>
+        <h1 class="first"> Logo</h1>
+        <ul>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </header>
     </div>
   </body>
 </html>
