added nav and section

--- a/index.html
+++ b/index.html
@@ -18,15 +18,20 @@
     <!-- End Roboto-->
   </head>
   <body>
-    <div class="container">
-      <header>
-        <h1 class="first"> Logo</h1>
+    <header class="site-header">
+      <h1 class="logo">Logo</h1>
+      <nav>
         <ul>
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link two</a></li>
-          <li><a href="#">header link three</a></li>
+          <li class="menu__item"><a href="#">header link one </a></li>
+          <li class="menu__item"><a href="#">header link two </a></li>
+          <li class="menu__item"><a href="#">header link three </a></li>
         </ul>
-      </header>
-    </div>
+      </nav>
+    </header>
+    <section>
+      <h1 class="first">This website is awesome</h1>
+      <p class="second">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+      <button>Sign up</button>
+    </section>
   </body>
 </html>
